--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <section class="prime">
     <div class="container prime-container">
       <div class="prime-img">
-        <!-- <img src="img/context/test.jpg" alt="test"> -->
+        <img class="cat" src="img/context/cat-test.jpg" alt="cat">
+        <img class="test" src="img/context/test.jpg" alt="test">
       </div>
       <div class="prime-text-box">
         <div class="text">
-          <h1 class="prime-heading">Имя Фамилия</h1>
+          <h1 class="prime-heading">
+            <span class="name">Имя</span>
+            <span class="surname">Фамилия</span>
+          </h1>
           <h2 class="prime-title">Профессия</h2>
           <p class="prime-text">
             Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Грамматики океана
@@ -29,6 +33,16 @@
       </div>
     </div>
   </section>
+  <div class="panel">
+    <div class="container">
+      <button id="test">test</button>
+      <button id="cat">cat</button>
+      <button id="clear">clear</button>
+      <button id="content">content</button>
+    </div>
+  </div>
+
+  <script src="js/index.js"></script>
 
 </body>
 
